# PALM

./: .gitignore  README.md  patch_manager.sh  pyproject.toml  requirement.txt  setup_training_env.sh
.patches/: pyrep.patch
palm/: __init__.py
palm/configs/dataset/: insert_peg_config.json  lift_lid_config.json  lift_spam_config.json  rearrange_veges_config.json
palm/configs/meta/: palm_dataset_meta.json
palm/configs/train/: insert_peg.json  insert_peg_baseline.json  lift_lid_baseline_config.json  lift_lid_config.json  lift_spam_baseline_config.json  lift_spam_config.json  rearrange_veges_baseline_config.json  rearrange_veges_config.json
palm/evaluation/: __init__.py  rollout.py
palm/models/: __init__.py  bc_mlp.py  blocks.py
palm/scripts/: collect_demos.py  dataset.py  dataset_manager.py  eval_trained_policy.py  train.py
palm/tools/: __init__.py  dataset_converter.py  dataset_generator.py  robo_augmentor.py
palm/training/: __init__.py  trainer.py
palm/utils/: config_utils.py  image_utils.py  net_utils.py  ood_utils.py  palm_utils.py  print_utils.py  rlbench_utils.py  transform_utils.py
